# Enchantment-App

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
inc/: database.h
src/: database.c  main.c
src/routes/: +page.svelte  LoginView.svelte
